--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,10 @@ html {
 body {
   font-size: 16px;
   /* 1rem = 10px */
-  font-family: 'Barlow', sans-serif;
-  background-color: #0F0E0E;
-  min-height: 100%; }
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color:blue;
+  min-height: 100%; 
+}
 
 .contG {
   width: 100%;
